# Music-Folder-Utils

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  dir.bash  extart.bash  justfile  makealbumsdir.bash  mfutil.bash  seticon.bash
.cargo/: config.toml
.github/: AI_SYSTEM_PROMPT.md  copilot-instructions.md  windsurf-tooling.md
man/: mfutil-albums.1  mfutil-all.1  mfutil-art.1  mfutil-cd.1  mfutil-import.1  mfutil-reorganize.1  mfutil-sync.1  mfutil-tracks.1  mfutil.1
src/: main.rs  tui.rs  utils.rs
src/commands/: albums.rs  art.rs  cd.rs  import.rs  mod.rs  organize.rs  reorganize.rs  sync.rs  tracks.rs
src/lib/: audio.rs  cd.rs  cover_art.rs  directory.rs  metadata.rs  mod.rs  musicbrainz.rs  progress.rs  tagging.rs  utils.rs
