[package]
name = "mfutil"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
ffmpeg-next = "8.0.0"
anyhow = "1.0.82"
thiserror = "2.0.16"
shellexpand = "3.1.0"
gio = { version = "0.21.2", features = ["v2_72"] }
glib = "0.21.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
magick_rust = "1.1.0"
crossterm = "0.29"
ratatui = "0.29"
metaflac = "0.2.7"
mp4ameta = "0.13.0"
tempfile = "3.2"
lofty = { version = "0.22.4" }
dotenvy = "0.15"
id3 = { version = "1.16.3"}
musicbrainz_rs = { version = "0.12.0", features = ["async", "rate_limit"] }
rayon = "1.8"
