[package]
name = "mfutil"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for speed and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster dev builds
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
ffmpeg-next = "8.0.0"
anyhow = "1.0.82"
shellexpand = "3.1.0"
gio = { version = "0.21.2", features = ["v2_72"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
magick_rust = "1.1.0"
lofty = { version = "0.22.4" }
dotenvy = "0.15"
musicbrainz_rs = { version = "0.12.0", features = ["async", "rate_limit"] }
rayon = "1.8"
rustc-hash = "1.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.10.0"
