[package]
name = "mfutil"
version = "0.1.1"
edition = "2021"

[lib]
name = "mfutil"
path = "src/lib/mod.rs"

[[bin]]
name = "mfutil"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Optimize for speed and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster dev builds
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
lofty = { version = "0.22.4" }
musicbrainz_rs = { version = "0.12.0", features = ["async", "rate_limit"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2.1.3"
walkdir = "2.5.0"
ffmpeg-next = "8.0.0"
shellexpand = "3.1.0"
gio = { version = "0.21.2", features = ["v2_72"] }
magick_rust = "1.1.0"
dotenvy = "0.15"
rayon = "1.8"
rustc-hash = "1.1.0"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
flacenc = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10.0"
crossterm = "0.29.0"

[features]
default = ["cd-ripping"]
cd-ripping = ["discid", "cdparanoia", "cdparanoia-sys"]

[dependencies.discid]
version = "0.5.0"
optional = true

[dependencies.cdparanoia]
version = "0.1.0"
optional = true

[dependencies.cdparanoia-sys]
version = "0.1.0"
optional = true
